# openclaw

./: CHANGELOG.md
apps/linux/: AGENTS.md  Cargo.toml  README.md  TECH_STACK.md  shell.nix
apps/linux/openclaw-core/: Cargo.toml
apps/linux/openclaw-core/src/: lib.rs  node_runtime.rs  ui.rs
apps/linux/openclaw-linux/: Cargo.toml
apps/linux/openclaw-linux/src/: config.rs  gateway_process.rs  gateway_rpc.rs  logging.rs  main.rs  onboarding.rs  settings.rs
apps/linux/openclaw-linux/src/node/: caps.rs  controller.rs  mod.rs  permissions.rs  runtime.rs  session.rs
apps/linux/openclaw-ui-gtk/: Cargo.toml
apps/linux/openclaw-ui-gtk/src/: lib.rs
